--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
         <section id="cadastros">
             <h2>Register</h2>
-            <form id="form" action="https://www.freecodecamp.com/email-submit">
+            <form id="form" action="">
                 <input name="email" id="email" type="email" placeholder="Enter your email address" required />
                 <input id="submit" type="submit" value="Go to cart!" class="btn" />
             </form>
